--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "liveServer.settings.port": 5501,
   "cSpell.words": [
     "Hawksbill",
-    "Perentie"
+    "Perentie",
+    "unintimidated"
   ]
 }
